--- a/Shreeji Finance/build.gradle
+++ b/Shreeji Finance/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	// Find out where to use spring-boot-devtools and what is does
 	//compile("org.springframework.boot:spring-boot-devtools")
 	
+	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
