--- a/Shreeji Finance/src/main/resources/application.properties
+++ b/Shreeji Finance/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.thymeleaf.cache=false
 #spring.queries.users-query=select email, password, active from user where email=?
 #spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 spring.queries.users-query=select email, password, status from master_employee where email=?
-spring.queries.roles-query=select mu.email, mr.name from master_employee mu inner join master_role mr on(mu.role_id=mr.id) where mu.email=?
+spring.queries.roles-query=select me.email as email, mr.name as role from master_employee me inner join master_role mr on me.role_id=mr.id where me.email=?
